--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796832.md#1" target="_blank">前川普经济顾问：美国从贸协中获得啥？</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796832.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/EpochTimes-9A6A6916-600x400-150x120.jpg" align ="left"></a>前川普（特朗普）团队经济顾问史蒂夫·摩尔（Steve Moore）周三（1月15日）在白宫接受大纪元采访，他表示，第一阶段贸易协议是美国的一个巨大胜利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 2:38 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796541.md#1" target="_blank">【拍案惊奇】首阶段贸易协议 中美各让步什么？</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796541.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15ea37447f82a531_ttl7daysRc_tn0115_-150x120.jpg" align ="left"></a>1月15日，在美国白宫，美国总统川普和中国副总理刘鹤，共同签署了美中第一阶段贸易协议。舆论普遍公认，第一阶段贸易协议是川普的胜利。就连对川普十分苛刻的《纽约时报》，也这么说。下面，我们先来了解，为什么说是川普的胜利，以及第一阶段贸易协议都包含哪些内容。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 1:21 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796761.md#1" target="_blank">阻房价下跌 四川达州买楼“送钱”</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796761.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/a9317ab93314058a4688a54777701778-150x120.jpg" align ="left"></a>中国楼市持续处于低迷状态，各省地方政府用尽一切办法，阻止房价下滑，有地方政府鼓励年轻人取得当地户籍，增加住房需求。四川省达州市就更直接，向买房者发放现金补贴，这种方法可以有效阻止房价滑落么?......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796747.md#1" target="_blank">对抗网军假消息 前北约官员：台湾是好例子</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796747.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001152148552378-150x120.jpg" align ="left"></a>前北约秘书长拉斯穆森昨天参与印度瑞辛纳对话座谈，会上讨论民主国家面临境外网军散布假消息影响选举的挑战，他提到总统大选、反渗透法，说台湾是对抗外国网军的好例子，能鼓舞其他国家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:20 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794395.md#1" target="_blank">大陆路面为何频频发生塌陷事件</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794395.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/6-3-150x120.png" align ="left"></a>继广州地铁施工区地面塌陷后一个月，青海省西宁市路面又发生塌陷，一辆公交车坠入塌陷坑内，造成9人死亡、10人失踪。路面频发塌陷引发民众担忧。那么，造成大陆道路塌陷的原因是什么？塌陷为何频频发生？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796525.md#1" target="_blank">中共巨额购买承诺太惊人 分析师：恐难兑现</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796525.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1142701434-150x120.jpg" align ="left"></a>美中1月15日签署了第一阶段贸易协议，中共承诺两年内增购2000亿美元的美国商品，但相关专家认为，中共很难兑现承诺，或成为空头支票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796694.md#1" target="_blank">中美贸易协议解读 金融服务领域八大要点</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796694.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/49391436856_86b0bfda71_k-150x120.jpg" align ="left"></a>1月15日，美国总统川普和中共副总理刘鹤在白宫签署美中第一阶段贸易协议。该协议涵盖八章，涉及知识产权、技术转让、金融服务、购买美国商品、执行机制等多个方面。而在金融服务领域，该协议有八大要点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 11:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796563.md#1" target="_blank">央视前主持人赵忠祥患癌在北京去世</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796563.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/70dd886e043bd4c5424ea5efc602d387-150x120.jpg" align ="left"></a>1月16日，中共央视前主持人赵忠祥因患癌症在北京去世，终年78岁。
@@ -10,6 +15,7 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796365.md#1" target="_blank">大陆演艺圈大洗牌？杨紫2019年最走红</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796365.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/yangzi_meitu_1-150x120.jpg" align ="left"></a>大陆演艺圈2018年经过了范冰冰逃税风波引发的大地震后，有业界人士指，影响所及，“四大花旦”在2019年似乎集体进入了“半退休”状态——徐静蕾“神隐”、周迅把时间给了“香奈儿”品牌，赵薇上了综艺节目，章子怡生了二胎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 9:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/11/18/n11664716.md#1" target="_blank">【思想领袖】艾贝尔：气候说词受政治操控</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/11/18/n11664716.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Screen-Shot-2020-01-15-at-6.43.23-PM-150x120.jpg" align ="left"></a>“企业竞争力学院”的“全球暖化及国际环境政策”的负责人，最近跟《大纪元时报》的资深编辑杨杰凯（Jan Jekielek）一起，就气候变化的争论，分享他的观点。艾贝尔（Ebell）明确地指出了，气候变化的预测模型以及实际测量数据之间的差异，并且强调了中国在温室气体排放中的角色。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 9:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796406.md#1" target="_blank">山寨乔丹告赢正版成中共法院范例 引发批评</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796406.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/640-150x120.png" align ="left"></a>大陆山寨乔丹品牌去年在中共最高法院被判没有侵权，曾引发大陆民众批评。近日，中共最高法院又将此案拿来作为指导性案例，再次令大陆民众直呼“丢人”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 8:22 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781776.md#1" target="_blank">【独家】《人民日报》前副总编遭情夫之子举报</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781776.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15eaaa1b234e1367_ttl7day7vG________1-150x120.jpg" align ="left"></a>中国大陆反腐上演了儿子举报父亲情妇、中共女高官的一幕。原人民日报社副总编马利（女）被指贪腐受贿，及非法同居、以权谋私等多项罪名，证据来自马利的微信记录和这对父子对她的日常观察。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 8:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796505.md#1" target="_blank">美中贸易协议 打击在线出售假冒产品</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796505.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6BP-150x120.jpg" align ="left"></a>美中周三（1月15日）签署的贸易协议内容广泛，除了涉及知识产权、技术转让、农业、金融服务、货币等领域外，协议还包括打击假冒产品的条款。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 8:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793247.md#1" target="_blank">山东招远610副主任宋少昌被举报到海外</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793247.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/2011-8-12-minghui-persecution-demo-01-1-150x120.jpg" align ="left"></a>山东省招远市“610”副主任宋少昌迫害法轮功20年，策划迫害、绑架、酷刑折磨和骚扰法轮功学员不计其数。据不完全统计，招远法轮功学员被非法劳教的有134人。宋少昌现被举报到明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 8:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796393.md#1" target="_blank">华为借道加国云计算 涉足国际核物理研究网络</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796393.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1905241929282384-150x120.jpg" align ="left"></a>根据2017年2月签署的一份没显示价格的合约，华为公司为加拿大云计算提供了硬件和软件，西蒙·菲沙大学（SFU）是加拿大方的牵头机构。加拿大云计算的区域合作伙伴有34个，包括西蒙·菲沙大学、多伦多大学、维多利亚大学、滑铁卢大学。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 8:04 AM							</td></tr>
@@ -23,14 +29,8 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795345.md#1" target="_blank">港警拟配备电击枪 泛民派议员强烈反对</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795345.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/58432859aaeaf60facb7541bf9ddd5fa-150x120.jpg" align ="left"></a>香港反送中运动持续进行中。据报导，港警正研拟给警员配备电击枪或网枪，作为日常维持治安之用，却引发社会争议。泛民派立法会议员表达强烈反对，并指出目前警民关系紧张，再提升任何警队装备，只会让情况更糟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795861.md#1" target="_blank">中美签第一阶段贸易协议 美国会回应多元化</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795861.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6M6-150x120.jpg" align ="left"></a>美中双方周三（1月15日）在白宫东厅签署第一阶段贸易协议，约200人的政、商界代表出席签字仪式。其中，有16位国会参议员以及11名众议员获邀参加签约仪式。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795863.md#1" target="_blank">【新闻看点】川刘大阵势签协议 北京被逼上架</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795863.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1193897134-150x120.jpg" align ="left"></a>美国总统川普和中共副总理刘鹤今天（1月15日）在白宫东厅签署了第一阶段贸易协议，意味着美中贸易战取得了阶段性成果。中方承诺巨额采购，但减免对中国关税的问题没有达成共识，美方将继续维持贸易战以来大部分对中国施加的关税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:33 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796086.md#1" target="_blank">中共国企欠民企9千亿 李克强年前急回应</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796086.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/02/1401312212562068-150x120.jpeg" align ="left"></a>2019年中共政府部门和国企拖欠民企逾8900亿元（人民币，下同），中共国务院总理李克强赶在中国新年前回应，同时特别提到农民工工资问题，被指中共对现状越来越感到恐惧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:25 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796210.md#1" target="_blank">美中签第一阶段贸易协议 央视罕见直播</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796210.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1193897134-600x400-1-150x120.jpg" align ="left"></a>中美贸易战持续一年多后，双方终于签定了第一阶段贸易协议，美国总统川普（特朗普）、副总统彭斯都先后于签署仪式前发表讲话，中共副总理刘鹤则宣读了习近平致川普的信。中共央视罕见进行了直播。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781406.md#1" target="_blank">【独家】专访郑文杰：指认千张照 港人被送中（四）</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781406.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20ad94883d75d62499e9d372707bcd1f-150x120.jpg" align ="left"></a>去年8月被中共当局以所谓“嫖娼”罪名拘留的29岁英国驻港领馆前雇员郑文杰日前在英国接受大纪元独家专访，详述自己在西九龙高铁站被“送中”，在深圳被关押、酷刑对待、单独囚禁及被逼认罪，以及出狱后在香港、台湾被跟踪恐吓的经历。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:07 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796125.md#1" target="_blank">组图：签协议后川普宴请刘鹤 称很快去中国</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796125.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6U7-150x120.jpg" align ="left"></a>1月15日，美中在白宫签署历史性的第一阶段贸易协议，随后双方举行午宴。协议的签署标志着全球两个最大经济体之间近两年的贸易战暂时停火，并为下一步达成更广泛协议谈判奠定基础。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 4:47 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796072.md#1" target="_blank">2020达沃斯经济论坛在即 哪些人将出席</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796072.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6ZO-150x120.jpg" align ="left"></a>来自世界各地的商界领袖和政界人士正在加紧准备下周即将举行的2020年世界经济论坛（WEF）。届时将有哪些人现身瑞士达沃斯自然是人们关心的话题之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 4:37 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796029.md#1" target="_blank">大补贴时代结束 大陆新能源汽车业雪上加霜</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796029.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/190210204338685-150x120.jpg" align ="left"></a>中国新能源汽车大补贴的时代已经过去，这将使得依靠补贴才能生存的中国汽车行业雪上加霜。去年，受经济不景气影响，中国多家汽车上市公司汽车销量下滑四至十多个百分点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 4:01 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795226.md#1" target="_blank">美中科技冷战  谢金河：美将大力封杀华为</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795226.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/ed2a69a1ba2de94b1ea0e3845c976c30-150x120.jpg" align ="left"></a>美中贸易战暂时休兵，财信传媒董事长谢金河15日预测，美中接着迈入科技冷战与国防军备的战争，预期美国将大力封杀华为，届时台湾相关的供应链会非常的危险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 3:55 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795862.md#1" target="_blank">【新闻看点】蔡英文大胜 中共官媒扭曲报导惹笑</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795862.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/1901020406272378-600x443-1-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>台湾大选的结果，蔡英文大胜，中共官媒报导并不多。仅有的一些报导也是怪怪的，引起了许多网友的嘲讽、质疑和批评。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 3:45 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797365.md#1" target="_blank">孙文斌杀女医生不足一月 法院迅速判处死刑</a><br></h3>今天（1月16日），杀害北京市朝阳区民航总医院女医生杨文的凶手孙文斌被判处死刑。上月24日，病人家属孙文斌用刀割喉杀死杨文。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 4:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796950.md#1" target="_blank">深圳一学校强收午托费 家长提诉求被威胁</a><br></h3>近期，多位深圳华胜实验学校一年级孩子的家长表示，该校强制收取3300元的午餐午托费用，然而，午餐伙食并不好。今天（1月16日）深圳市宝安区教育局发通报要求学校午餐午休服务遵守自愿原则。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 2:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795935.md#1" target="_blank">前央视主播赵普投资酒店 发文请网友免费试住</a><br></h3>四年前从央视辞职的新闻主播赵普，近日在微博发文：“有这么个事，我投资了一些不怎么漂亮的酒店，闲着也是闲着，想请大家免费去睡，又担心报名的人挤爆，万一打起来咋整呢？！”因此，他笑说，要网友给“给支个招”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 6:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795358.md#1" target="_blank">中共涉干预外媒 自由之家吁各国驱逐中共官员</a><br></h3>国际人权组织自由之家（Freedom House）周三（1月15日）敦促各国，在中共宣传、审查和控制新闻内容的能力上升，并正努力扩大其在全球的媒体影响力之际，各国政府应惩罚中国官员，并制定更严格的广电规范。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413_4.md#1">下一页</a></h3></td></tr>
