--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/2/n11763828.md#1" target="_blank">武汉爆发似SARS“不明肺炎”民众如何防范？</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/2/n11763828.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/pneumonia-010220-150x120.jpg" align ="left"></a>武汉近日爆发“不明病毒性肺炎”，民众担忧多年前夺走数百条人命的SARS（严重急性呼吸道症候群）重现。由于中共官方一向有隐瞒疫情的前科，专家建议身在疫区或近日前往当地的民众一定要做好防范。为因应武汉市的肺炎流行疫情，台湾已对武汉直航的班机进行登机检疫，希望将疫情阻绝于境外。面对不明肺炎 民众如何防范？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/2/n11763808.md#1" target="_blank">家被强拆父母冤死 男子出狱报复致1死2伤</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/2/n11763808.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/33-150x120.jpeg" align ="left"></a>新年首日，江苏仪征市刘集镇发生一起命案，凶手为曾因强拆上访坐牢的彭在林，出狱之后将村支书女儿以及当年的拆迁者2人杀伤，凶手自杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/2/n11762363.md#1" target="_blank">武汉SARS疑云 附近居民不去市场也感染肺炎</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/2/n11762363.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1154839639-150x120.jpg" align ="left"></a>2019年年末，湖北武汉华南海鲜市场爆发“不明病毒性肺炎”疫情，疑似“非典”（SARS）卷土重来。1月1日，陆媒称，市场附近居民也感染了不明原因肺炎，甚至有平时不去该市场买东西的居民。此外，台湾疾管署发布澄清新闻稿表示，网传武汉天河机场疑似肺炎感染者入境台湾是假的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/1/n11761169.md#1" target="_blank">武汉飞抵台湾航班 检疫人员登机检疫</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/1/n11761169.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e6045186f3f335_ttl7dayhOQ________________-150x120.jpg" align ="left"></a>湖北武汉近日爆发“不明病毒性肺炎”疫情，27宗病例中7人情况危急，疑似“萨斯”卷土重来。香港、台湾亦紧盯事态。武汉出发的航班飞抵台湾，检疫人员已经进行登机检疫工作。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 4:10 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11769646.md#1" target="_blank">香港怀疑武汉肺炎案至16例 最小病人2岁</a><br></h3>湖北武汉不明肺炎病例在当地暴增并延烧至香港。在过去24小时内，新增8宗曾经到武汉，返港后出现肺炎等症状的病例。怀疑个案从14例增至16例。最小的病人只有2岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:08 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11769311.md#1" target="_blank">新年刚过 陕西连发两起杀人案 致4死1伤</a><br></h3>2020年新年刚过，陕西传出两起杀人案。1月2日，陕西西安市第66中学女教师周某娟被高三学生李某伤害致死。1月4日，汉中市宁强县，男子徐某林将王某、雷某杰杀死，将9岁女童王某彤致伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:19 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11769417.md#1" target="_blank">因应武汉肺炎 香港启动“严重应变级别”</a><br></h3>武汉爆发疑似萨斯疫情，大陆社交媒体疯传后官方再补发公告，短短三天个案从27例飙升44例。香港近期到过武汉后发热、呼吸道感染及肺炎症状入院治疗有8人。港澳应对升级，香港启动“严重应变级别”。专家批北京政府处理失当，后果严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11768891.md#1" target="_blank">四川青样一住宅天然气泄漏起火 地面都震动</a><br></h3>1月4日深夜，四川成都青羊区一住宅小区天然气泄漏起火，并伴随爆炸声，导致1人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 2:34 PM							</td></tr>
