--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -1,4 +1,18 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794160.md#1" target="_blank">大象罕见爬墙欲偷摘芒果 镜头全都录</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794160.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1192690536-150x120.jpg" align ="left"></a>大象的动作并不算敏捷，所以人们不认为它们会爬墙和当小偷。然而，最近在尚比亚却有一只大象爬墙欲偷摘芒果，而且全被镜头拍了下来。这个罕见画面让网民们大开眼界。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:31 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790562.md#1" target="_blank">一上场就吸引观众注意力 上场介绍词2要点</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790562.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20200114_shouhui_GettyImages-114402120_01-150x120.jpg" align ="left"></a>一个好的介绍能为你的表演设定好的风格基础，而差的介绍会挖坑给你跳，你还得花些时间才能爬出来。介绍很重要，所以花些时间准备一个适合你的介绍词。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 11:09 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11789417.md#1" target="_blank">打鼾浅说</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11789417.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/stock-photo-snore-problem-concept-illustration-of-normal-airway-and-obstructive-sleep-apnea-597057590-150x120.jpg" align ="left"></a>值得一提的是，打鼾是睡眠呼吸中止症的前兆，睡眠呼吸中止症是一种致命的疾病，最直接受害者就是枕边人，医界对睡眠呼吸中止症的患者有个形容，称他们为”在梦中被死神掐住脖子的人”，因为他们睡眠常伴随鼾声，无法正常呼吸，有时会突然没有声息，停止呼吸长达十至九十秒，在窒息中慢慢走向死亡，接着一个大声的喘息，或鼻息又恢复了呼吸，不久.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 6:50 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11741758.md#1" target="_blank">更年期难熬？试试这七个方法</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11741758.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/menopause-improve_786740620-150x120.jpg" align ="left"></a>根据美国卫生与公共服务部统计，有1%的女性不到40岁就经历过早性更年期，5%的女性在40～45岁早期更年期，而一般更年期会在45～55岁之间发生。一般来说更年期的症状约持续7年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 3:38 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793084.md#1" target="_blank">压力大就肚子痛 腹泻？肠躁症10人中2人有</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793084.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/irritable-bowel-syndrome_539918410-150x120.jpg" align ="left"></a>一听到肠躁症（全名是“大肠激躁症”），很多人第一个想法就是吃东西会拉肚子，其实肠躁症的症状有很多种情况：有可能是肚子痛到站不起来，又或是胀气、便秘等等。现代人由于工作繁忙、生活压力大，近年来得到肠躁症的人愈来愈多，根据统计，国人每十人就有两人有肠躁症的问题，比率高达22％。如果罹患了肠躁症，除了药物治疗外......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:00 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793018.md#1" target="_blank">现在还适合投资多伦多公寓吗？</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793018.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_78470338-150x120.jpg" align ="left"></a>多伦多房地产专家警告，随着共管公寓成本持续攀升，但租金已日益涨至人们再也承受不起的地步。专家预计，不到5年，共管公寓市场会转向，到时租金收入无法支付公寓日常持有成本，投资者的现金流就会出问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 11:22 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790005.md#1" target="_blank">双胞胎姊妹抱紧睡觉还微笑 互相陪伴安心又幸福</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790005.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/db166cf927ad6cd60fcb966a6047b387-150x120.jpg" align ="left"></a>有人说双胞胎之间存在着神秘的心灵感应？这一对住在美国佛罗里达的双胞胎姊妹就紧紧依偎在一起，还脸上泛着微笑的伸手抱在一起，温馨幸福的萌翻了一堆网友。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:35 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11791826.md#1" target="_blank">网民：看了这段短片就知道伊朗“不可怕”</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11791826.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1193051462-150x120.jpg" align ="left"></a>在美军以无人机击毙伊朗军头苏莱曼尼（Kassem Soleimani）之后，美伊两国之间的紧张关系进一步升级，也引发了人们对战争爆发的担忧。不过，有网民表示，看了网上流传的一段伊朗士兵的出糗短片，应该就不会害怕伊朗了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:18 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11791492.md#1" target="_blank">高端房市 有理由对2020乐观看待（上）</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11791492.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e97a4db296c368_ttl7dayrcu_shutterstock_1402003538-150x120.jpg" align ="left"></a>编译：艾薇?大纪元
+对全球经济放缓，中美贸易战的日益增温，美伊战火一度燃起，许多不确定性从去年夏天至今，加剧了对经济衰退的担忧，不过美股在2019年仍是强劲成长，对于全球豪华房地产中心来说，这是令人鼓舞的消息。特别在世界超级豪宅市场，市场的表现与全球经济增长紧密相关。
+
+瑞银全球财富管理公司的策略师托马斯?韦拉古.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 6:40 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11791726.md#1" target="_blank">打击脏污好帮手 小苏打的7个妙用</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11791726.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_62180671_Subscription_L-150x120.jpg" align ="left"></a>年节来临前，家家户户都会把房子打扫一遍，给新年带来新气象。一起动手打扫，也是给孩子的好榜样，让孩子学习如何挽起袖子，身体力行为环境整洁尽一己之力。在打扫时，小苏打粉是个万用好帮手。如果善用小苏打，许多顽垢都能迎刃而解。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 5:56 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11792341.md#1" target="_blank">印度女子在自己的葬礼上突然睁眼起身</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11792341.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1052592184-150x120.jpg" align ="left"></a>印度卡纳塔克邦（Karnataka）一名被宣告死亡的55岁女子，突然在自己的葬礼上醒来，让现场的亲友惊呆了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 5:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11791511.md#1" target="_blank">你需要补牙吗？补牙前你一定要知道这些事</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11791511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/teeth-dental-filling0-200113-150x120.jpg" align ="left"></a>很多人一生中都有过补牙的经历，补牙会带来伤害吗？有些人补完牙为什么牙齿更敏感？哪些情况需要补牙？常见的银粉、树脂、陶瓷等补牙材料，有何优缺点？来牙医诊所检查牙齿，有三种情况需要补牙：预防、恢复功能（如蛀牙）、美观。树脂与银粉填补，适合小范围蛀牙或缺损。许多人会遇到补牙完后，牙齿敏感酸痛的问题，可能来自多种原因：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 2:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790090.md#1" target="_blank">超写实羊毛毡小动物 像迪士尼动画的主角可爱极了</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790090.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/11201374133ba517f781b7ce43413d05-150x120.jpg" align ="left"></a>一位俄罗斯艺术家用羊毛毡制作小动物，作品非常可爱小巧而又写实美丽，他专门制作林地动物看起来就像是从 迪斯尼电影中走出来的一样，让人看得不知不觉地嘴角挂起微笑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 11:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790965.md#1" target="_blank">2019旧金山湾区房价 12月份销售一览（上）</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790965.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/12.49.54-150x120.png" align ="left"></a>以下表格即是2019年12月份，湾区部分城市的房产销售一览。
@@ -44,24 +58,5 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11786298.md#1" target="_blank">受喜爱也是最脏的化妆品 使用不当小心脸部危机</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11786298.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/cosmetics-health_175336325-copy-150x120.jpg" align ="left"></a>如果化妆品保养不当、化妆工具没有适当清洗，细菌会不断在上面累积，用后导致脸部长脓包，或引发其它肌肤疾病。使用过的化妆品中，约8到9成有细菌污染，包含金黄色葡萄球菌、大肠杆菌与弗氏柠檬酸杆菌。美妆蛋最脏，唇蜜排第二。另外，使用过期化妆品也很危险。97.9%的人会在化妆品过期后继续使用。如何正确清洗、保存化妆品？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 12:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11786682.md#1" target="_blank">德国饮食传统 (1) ：中午前吃完的白香肠</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11786682.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e9008cb33366da_ttl7daydzr_shutterstock_1023386170-150x120.jpg" align ="left"></a>德国的香肠种类多达上千种，各区域都有风味不同的特色香肠，如味道浓厚的法兰克福香肠，尺寸小巧的纽伦堡香肠，以及我们今天介绍一定要在中午前吃完的白香肠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11786823.md#1" target="_blank">乌克兰女星在台湾首次体验投票 只花5分钟</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11786823.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1901240243242122-150x120.jpg" align ="left"></a>在今年的台湾总统大选中，118万的首投族多半是年轻人，但其中有一名新住民的身份特殊，她就是来自乌克兰的艺人暨模特儿瑞莎（Larisa Bakurova）。瑞莎说，很高兴能在台湾进行她生平的第一次投票，她只花5分钟就投完票，感觉台湾好棒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:03 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782826.md#1" target="_blank">减肥不当加速肌肉流失！远离肌少症3大凶手</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782826.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/muscle-loss_1175654545-150x120.jpg" align ="left"></a>为何会肌肉流失、得肌少症？年过40的人，肌肉的生长量就开始赶不上流失速度了，一般40岁以上的人肌肉量每10年约减少8%，如果我们不趁年轻增加我们的肌肉量、多运动减少肌肉的流失，那老了可能就会面临走不远，失去很多生活机能的危机。增加肌肉力量，预防和治疗肌少症，让老人家不再瘦瘦小小、浑身无力，活得更有尊严。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:43 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785951.md#1" target="_blank">认识多汗症</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785951.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Hyperhidrosis-200111-150x120.jpg" align ="left"></a>多汗症是指汗异常出得过多，需要调节体温来降低出汗的一种问题。多汗对身体是一种负担，可造成患者的心理、情绪与社交问题，因此也被称为无声的残障。多汗症可以是全身性的，也可以是局部性的，如手脚、腋窝、腹股沟、脸部多汗。全身多汗症（次发性多汗症）通常与本身潜在疾病有关系局部多汗症（原发性多汗症）可分为掌跖多汗症，......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 3:16 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11783855.md#1" target="_blank">2020美甲趋势  复古时尚展现全新风貌</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11783855.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_790135237-150x120.jpg" align ="left"></a>妆点自己的指甲是充满趣味的一种体验，涂上美丽的指甲油，就像是帮指甲上妆一般，可以展现自己的品味与风格。下面我们将介绍2020年的美甲趋势，你可以从中选择你喜爱的造型尝试看看！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 4:01 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11783428.md#1" target="_blank">预防武汉肺炎  中医4招提升正气 增强免疫力</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11783428.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/wuhan-pneumonia-chinese-medicine_1586627872-150x120.jpg" align ="left"></a>武汉日前爆发的不明肺炎已判定为“新型冠状病毒”，让民众担心被传染的风险。中医4方法提升正气，增强免疫力，抵抗传染病。“正气”是指人体中正的能量，也就是抵抗病邪的源泉。好的行为、情绪和饮食，能提升人的正气。健脾补气可提升正气、抵抗病毒。如何健脾胃？在于吃的恰当，还有一些食物专补脾胃。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:52 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11783465.md#1" target="_blank">和爸爸打拼生活 14月大男娃铲雪笑翻网友</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11783465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/GettyImages-653236048-150x120.jpg" align ="left"></a>对一个蹒跚学步的小娃儿来说，新年伊始就要这么努力地打拼，也只能大叹生活真艰苦啊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 7:17 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11783158.md#1" target="_blank">按手上1神奇穴位 迅速止牙痛</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11783158.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/toothache-acupuncture-point6_756247357-150x120.jpg" align ="left"></a>牙痛起来好难忍！赶紧掐合谷穴，就会缓解许多。为何合谷穴有这么神奇的效果？这就要从它所属的经络——手阳明大肠经说起了。掐按合谷穴，让大肠经气血畅通，牙痛就自然会缓解了。牙痛时，一手握空拳或自然放松，以另一手拇指指腹揉按合谷穴1～2分钟，以感觉到酸胀感而可以忍受为佳；然后换手再按，直至牙痛减缓。合谷穴位于手的......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 4:52 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782368.md#1" target="_blank">汉堡也可安心吃！掌握3点自制汉堡 营养又美味</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782368.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/healthy-hamburger-homemade_644936938-150x120.jpg" align ="left"></a>快餐店中的汉堡往往热量高、营养低。自己在家能做出美味的健康汉堡。自制汉堡排不仅热量低，也是补充营养的好方式。市售汉堡排多以牛肉为主，牛绞肉油脂较少，煎起来又干又硬，因此会加入脂肪量高的猪绞肉，吃起来才会湿润多汁。自制汉堡排时可加入蘑菇等食材。可以使用一些面包的替代品，不仅减少碳水化合物的摄取，还让口味更丰足。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 2:45 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781698.md#1" target="_blank">韩国“保母车”：2020 Kia Carnival MPV</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781698.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20200110-Chi-Jin-Kia-Carnival-01-150x120.jpg" align ="left"></a>KIA是两大韩国汽车品牌之一，中文名叫起亚。最初的Logo设计为绿色图形符号，随后在1994年为了纪念创业50周年而改用白底红字的字母Logo，一直沿用至今。KIA不仅生产轿车、SUV，还涉及MPV领域，Carnival是KIA旗下的一款MPV八坐“保母车”，澳洲俗称people mover。Carnival MPV由.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 2:07 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781469.md#1" target="_blank">野火灾情惨重 澳洲青年开车四处救无尾熊</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1185446524-150x120.jpg" align ="left"></a>澳洲野火自去年9月延烧至今，已经烧掉相当于韩国那么大的林地，导致5亿只动物死亡，其中包括大量澳洲特有的可爱动物无尾熊。除了澳洲政府致力于灭火之外，当地民众也尽力救灾，其中包括弥迦（Micah）和迦勒（Caleb）这两名年轻男子。他们开车四处搜寻，试图拯救受灾的无尾熊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:38 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11779521.md#1" target="_blank">老爷爷亲手编织“白癜风娃娃”疗愈儿童患者</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11779521.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/7ee7890ec85f10aa1bc5a2357839953e-150x120.jpg" align ="left"></a>住在巴西的一位64岁爷爷，由于自己是一位白癜风患者，退休后开始制作“白癜风娃娃”送给患有同样症状的儿童，收到娃娃的孩子们个个都高兴的爱不释手。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:33 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11783310.md#1" target="_blank">汽车维修问与答：气温零下时方向盘变紧</a><br></h3>汽车维修问与答
-
-读者Grace问：李师傅您好!
-
-我的车是2005年BMW X3 2.5L，电瓶没电后更换了电瓶，车是老版本不需要注册电池。现在前雨刮刷和车窗不工作，保险和继电器都已经测试过正常。您能提供些维修建议吗？非常感谢。
-
-&nbsp;
-
-李进答：Grace您好，我感觉还是出在汽车的电脑上。.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 5:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zsifxm298/djy/blob/master/gb/news2008_2.md#1<br><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zsifxm298/djy/blob/master/gb/news2008_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_2.htm">http://www.epochtimes.com/gb/news2008_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
